# clawagents-desktop

./: .gitignore  AGENTS.md  README.md  build.sh  start.sh
backend/: .env.example  AGENTS.md  LICENSE  README.md  SECURITY.md  core-parity.json  pyproject.toml  test_new_features.py
backend/.github/workflows/: ci.yml
backend/.plans/: v6.6-v6.9-hermes-parity.md
backend/scripts/: check_core_parity.py  run_tests.sh  smoke_gemma4.py
backend/src/clawagents/: __init__.py  __main__.py  agent.py  aux_models.py  background.py  capabilities.py  circuit_breaker.py  commands.py  companions.py  doom_loop.py  dry_run.py  eval.py  evals_cli.py  explorer.py  function_tool.py  guardrails.py  handoff_filters.py  handoffs.py  harness_profiles.py  interjection.py  iteration_budget.py  lifecycle.py  loop_detection.py  modes.py  output_format.py  paths.py  plugin_compat.py  plugins.py  provider_profiles.py  redact.py  retry.py  run_context.py  run_result.py  steer.py  stream_events.py  structured_output.py  tokenizer.py  tool_output_artifacts.py  transport.py  usage.py
backend/src/clawagents/acp/: __init__.py  errors.py  messages.py  server.py  session.py
backend/src/clawagents/autopilot/: __init__.py  loop.py
backend/src/clawagents/browser/: __init__.py  _safety.py  config.py  errors.py  providers.py  session.py  snapshot.py  tools.py
backend/src/clawagents/channels/: __init__.py  auto.py  keyed_queue.py  router.py  signal.py  telegram.py  types.py  whatsapp.py
backend/src/clawagents/config/: config.py  features.py
backend/src/clawagents/context/: __init__.py  carryover.py
backend/src/clawagents/cron/: __init__.py  errors.py  jobs.py  scheduler.py
backend/src/clawagents/desktop_stores/: app_paths.py  permission_grant_store.py  project_store.py  provider_catalog.py  runtime_trust.py  settings_store.py  skills_catalog.py  url_trust.py
backend/src/clawagents/errors/: __init__.py  taxonomy.py
backend/src/clawagents/events/: __init__.py  envelope.py
backend/src/clawagents/gateway/: agent_power_api.py  attachments_api.py  backup_api.py  chats_api.py  commands_api.py  desktop_router.py  diagnostics_api.py  mcp_loader.py  permissions_api.py  plan_approvals_api.py  projects_api.py  protocol.py  providers_api.py  rewind_api.py  server.py  settings_api.py  skills_api.py  stats_api.py  system_api.py  templates_api.py  ws.py
backend/src/clawagents/goal/: __init__.py  product.py  tools.py
backend/src/clawagents/graph/: agent_loop.py  codeact.py  coordinator.py  forked_agent.py  model_profiles.py
backend/src/clawagents/hooks/: __init__.py  external.py  prompt_hook.py  taxonomy.py
backend/src/clawagents/logging/: diagnostic.py
backend/src/clawagents/marketplace/: __init__.py
backend/src/clawagents/mcp/: __init__.py  manager.py  server.py  tool_bridge.py
backend/src/clawagents/media/: __init__.py  documents.py  images.py
backend/src/clawagents/memory/: attributed_hunks.py  compact_tool_results.py  compaction.py  compaction_segments.py  content_budgets.py  content_crush.py  context_ledger.py  core_memory.py  dream.py  facts.py  full_replace_compaction.py  hunk_watcher.py  loader.py  memory_flush.py  output_trim.py  repo_map.py  rules.py  scope_graph.py  shadow_checkpoint.py  smart_store.py
backend/src/clawagents/permissions/: __init__.py  act_invariants.py  mode.py  plan_approval.py
backend/src/clawagents/process/: command_queue.py
backend/src/clawagents/prompts/: __init__.py  cache_align.py
backend/src/clawagents/providers/: fallback.py  llm.py  model_classify.py  tool_schema.py
backend/src/clawagents/rl/: __init__.py  adapters.py  errors.py  export.py  recorder.py  scorers.py  trajectory.py
backend/src/clawagents/sandbox/: __init__.py  backend.py  credential_proxy.py  docker.py  local.py  manifest.py  memory.py  profiles.py
backend/src/clawagents/security/: __init__.py  secret_paths.py
backend/src/clawagents/session/: __init__.py  backends.py  heartbeat.py  persistence.py  (+3 more)
backend/tests/: conftest.py  test_acp.py  test_act_vs_goal_mode.py  test_agent_loop_bugs.py  test_ask_user_question.py  test_atomic_write.py  test_aux_models.py  test_background.py  test_browser.py  test_circuit_breaker.py  test_commands.py  test_compaction_hardened.py  test_companions.py  test_config.py  test_credential_proxy.py  test_cron.py  test_cross_provider.py  test_exec_safety.py  test_exec_safety_v2.py  test_gemini_thought_signature.py  test_gpt56_chat_completions_tools.py  test_grok_build_parity.py  test_handoffs.py  test_hashline_and_execute_bg.py  test_image_sanitization.py  test_infra_improvements.py  test_integration_parallel.py  test_integration_sophisticated.py  test_interface.py  test_interjection.py  test_mcp.py  test_mcp_env_scrub.py  test_mock_provider.py  test_nested_tool_schema_situations.py  test_openai_agents_surfaces.py  test_openharness_inspired_surfaces.py  test_parallel_native_indexing.py  test_paths.py  test_prompt_hook.py  test_prompts.py  (+16 more)
backend/tests/desktop/: conftest.py  test_agent_power_parity.py  test_ask_user_hitl.py  test_attachments_api.py  test_auto_title.py  test_backup_api.py  test_cancel.py  test_cancel_stops_turn.py  test_caveman.py  test_chat_cross_turn_memory.py  test_chat_delete_cleanup.py  test_chat_events.py  test_chat_export.py  test_chat_export_json.py  test_chat_fork.py  test_chat_meta_event.py  test_chat_model_selection.py  test_chat_move.py  test_chat_note.py  test_chat_patch.py  test_chat_pinning.py  test_chat_retry.py  test_chat_search.py  test_chat_soft_delete.py  test_chats_api.py  test_commands_api.py  test_compact.py  test_compact_backups.py  test_core_parity.py  test_desktop_router_auth.py  test_diagnostics_api.py  test_e2e_smoke.py  test_env_write_permission_gate.py  test_event_translation.py  test_file_preview.py  test_git_status.py  test_grant_short_circuit.py  test_messaging_api.py  test_mode_path_scoping.py  test_mode_short_circuits_permission.py  (+41 more)
ui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: keyring_cmd.rs  lib.rs  main.rs  port.rs  sidecar.rs  ssh.rs
(+206 files in other folders)
