[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawagents-desktop-backend"
version = "6.8.1"
description = "Lean, full-stack agentic AI framework with PTRL (Prompt-Time Reinforcement Learning)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ClawAgents Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.1.0"]
anthropic = ["anthropic>=0.40.0"]
accurate-tokens = ["tiktoken>=0.5.0"]
media = ["Pillow>=10.0"]
# Optional MCP (Model Context Protocol) client. Required only when wiring
# external MCP servers via ``MCPServerStdio`` / ``MCPServerSse`` /
# ``MCPServerStreamableHttp``. Install with ``pip install -e 'backend[mcp]'``.
mcp = ["mcp>=1.0.0"]
# Browser automation tools. ``pip install -e 'backend[browser]'`` then
# ``playwright install chromium`` to fetch the runtime.
browser = ["playwright>=1.40.0"]
# Cloud browser provider stubs (real implementations land later — these
# extras exist so cloud-provider users have a stable extras name today).
browser-browserbase = ["playwright>=1.40.0"]
browser-cloud = ["playwright>=1.40.0"]
# Cron expressions. Interval and one-shot schedules work without this.
cron = ["croniter>=1.4"]
# Reinforcement-learning fine-tuning hooks (TRL adapter, Atropos export).
# The hooks export trajectories regardless; this extra pulls TRL only.
rl = ["trl>=0.7.0"]
# Agent Communication Protocol adapter.
acp = ["agent-client-protocol>=0.1.0"]
all = [
    "google-genai>=0.1.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.5.0",
    "Pillow>=10.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "croniter>=1.4",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    # Pin xdist so `scripts/run_tests.sh` can fan out tests deterministically;
    # the matching CLI flag is `-n` and the version is fixed to keep the
    # worker-protocol stable across local and CI runs.
    "pytest-xdist>=3,<4",
    "tiktoken>=0.5.0",
    "google-genai>=0.1.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
]

[project.scripts]
clawagents-desktop-backend = "clawagents.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clawagents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["benchmark: performance benchmark tests (deselect with -m 'not benchmark')"]
# Make the in-tree `src/clawagents` win over any globally-installed `clawagents`
# package. Without this, `pytest` may import a stale wheel from site-packages and
# silently bypass local changes (notably the redirect-aware SSRF check).
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/clawagents"]
# Don't fail on missing stubs for optional/3rd-party deps that aren't installed
# in every dev env (telegram, anthropic SDK types, etc.). Real type errors in
# our own code still surface.
ignore_missing_imports = true
# Tools and trajectory recorders use **kwargs for forward-compat — don't insist
# on exhaustive Literal narrowing for those.
warn_redundant_casts = true
warn_unused_ignores = true
# Per-module overrides go here when needed (e.g. relaxing for vendored code).
