[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawagents"
version = "6.20.50"
description = "Lean, full-stack agentic AI framework with PTRL (Prompt-Time Reinforcement Learning)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ClawAgents Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.1.0"]
anthropic = ["anthropic>=0.40.0"]
bedrock = ["anthropic>=0.40.0", "boto3>=1.34.0"]
accurate-tokens = ["tiktoken>=0.5.0"]
media = ["Pillow>=10.0"]
# Optional MCP (Model Context Protocol) client. Required only when wiring
# external MCP servers via ``MCPServerStdio`` / ``MCPServerSse`` /
# ``MCPServerStreamableHttp``. Install with ``pip install 'clawagents[mcp]'``.
mcp = ["mcp>=1.0.0"]
# Browser automation tools. ``pip install 'clawagents[browser]'`` then
# ``playwright install chromium`` to fetch the runtime.
browser = ["playwright>=1.40.0"]
# Cloud browser provider stubs (real implementations land later — these
# extras exist so cloud-provider users have a stable extras name today).
browser-browserbase = ["playwright>=1.40.0"]
browser-cloud = ["playwright>=1.40.0"]
pty = ["pexpect>=4.8", "pyte>=0.8"]
watch = ["watchfiles>=0.21"]
# Cron expressions. Interval and one-shot schedules work without this.
cron = ["croniter>=1.4"]
# Reinforcement-learning fine-tuning hooks (TRL adapter, Atropos export).
# The hooks export trajectories regardless; this extra pulls TRL only.
rl = ["trl>=0.7.0"]
# Agent Communication Protocol adapter.
acp = ["agent-client-protocol>=0.1.0"]
all = [
    "google-genai>=0.1.0",
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "tiktoken>=0.5.0",
    "Pillow>=10.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "croniter>=1.4",
    "pexpect>=4.8",
    "pyte>=0.8",
    "watchfiles>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    # Pin xdist so `scripts/run_tests.sh` can fan out tests deterministically;
    # the matching CLI flag is `-n` and the version is fixed to keep the
    # worker-protocol stable across local and CI runs.
    "pytest-xdist>=3,<4",
    "tiktoken>=0.5.0",
    "google-genai>=0.1.0",
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/x1jiang/clawagents_py"
Repository = "https://github.com/x1jiang/clawagents_py"
Issues = "https://github.com/x1jiang/clawagents_py/issues"

[project.scripts]
clawagents = "clawagents.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Pin the async-fixture loop scope: pytest-asyncio warns on every run while
# unset and will change its default in a future release. "function" matches
# the current implicit behavior (a fresh loop per test).
asyncio_default_fixture_loop_scope = "function"
markers = ["benchmark: performance benchmark tests (deselect with -m 'not benchmark')"]
# Make the in-tree `src/clawagents` win over any globally-installed `clawagents`
# package. Without this, `pytest` may import a stale wheel from site-packages and
# silently bypass local changes (notably the redirect-aware SSRF check).
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/clawagents"]
# Don't fail on missing stubs for optional/3rd-party deps that aren't installed
# in every dev env (telegram, anthropic SDK types, etc.). Real type errors in
# our own code still surface.
ignore_missing_imports = true
# Tools and trajectory recorders use **kwargs for forward-compat — don't insist
# on exhaustive Literal narrowing for those.
warn_redundant_casts = true
warn_unused_ignores = true
# Per-module overrides go here when needed (e.g. relaxing for vendored code).

[tool.ruff.lint]
# Keep defaults (E4/E7/E9/F). The public API re-exports live in __init__.py
# files by convention — don't flag them as unused imports.

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
